algumas notas.../sebenta

--- a/docs/makefile
+++ b/docs/makefile
@@ -1,4 +1,7 @@
-all: index.html
+all: index.html notas.pdf
 
 index.html: diario.md
 		pandoc diario.md -s -o index.html
+
+notas.pdf: notas.md
+	pandoc -V geometry:a4paper,margin=2cm -V numbersections --toc -t pdf 'notas.md'  -o notas.pdf
