--- a/docs/makefile
+++ b/docs/makefile
@@ -5,3 +5,18 @@ index.html: diario.md
 
 sebenta.pdf: sebenta.md
 	pandoc -V geometry:a4paper,margin=2cm -V numbersections --toc -t pdf 'sebenta.md'  -o sebenta.pdf
+	
+d:
+	- rm index.html sebenta.pdf
+	make all
+
+pull:
+	- rm index.html sebenta.pdf
+	git pull
+	make all
+
+install:
+	make pull
+#	git add .
+	git commit -a -m "installing"
+	git push
